Убрала варнинги, репорта все еще нет.